# ChangeLog for net-libs/libnfsidmap
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfsidmap/ChangeLog,v 1.1 2006/06/10 19:12:48 vapier Exp $

*libnfsidmap-0.16 (10 Jun 2006)

  10 Jun 2006; Mike Frysinger <vapier@gentoo.org> :
  Version bump / rename.

*nfsidmap-0.10 (15 Mar 2005)

  15 Mar 2005; Mike Frysinger <vapier@gentoo.org> +nfsidmap-0.10.ebuild:
  Version bump.

*nfsidmap-0.9 (04 Feb 2005)

  04 Feb 2005; Aron Griffis <agriffis@gentoo.org> +nfsidmap-0.9.ebuild:
  Bump to version 0.9

  08 Jan 2005; Sven Wegener <swegener@gentoo.org> nfsidmap-0.7.ebuild:
  Added inherit flag-o-matic.

*nfsidmap-0.7 (30 Dec 2004)

  30 Dec 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Micheal Marineau #70732.