@@ -10,6 +10,7 @@ MD5 a0de3134c6108be9aa1b084757930341 files/nfsidmap-0.9-optional-ldap.patch 790
 RMD160 961ff39347f4399b3263dcfe7c8dbd4b6f3ee2b6 files/nfsidmap-0.9-optional-ldap.patch 790
 SHA256 74bca8df4670b3b2d43d0443d1ded2e2aadfdeb83309ffd95b3841587d19a7f5 files/nfsidmap-0.9-optional-ldap.patch 790
 DIST libnfsidmap-0.16.tar.gz 311737 RMD160 b9665cfe50d9748e2a00249f4c5b5f76f032d140 SHA1 a811ff70da13ba53754162deac9747ef02231105 SHA256 efcf0233a48a618efbacdcc7332843ca98b1e8b940d624f5c9fe460838c08b74
+DIST libnfsidmap-0.17.tar.gz 325467 RMD160 819a7485b05bfa7de911bd5e50e7cc1c9b10c359 SHA1 2e2f58caf753ad12f67536009bee968affe93831 SHA256 6b3b0ffcad93f1b80f66f69330c0a8d43a5c927f7505d8086e48c831cbf7fdea
 DIST nfsidmap-0.10.tar.gz 297593 RMD160 76a2c834fcc0002e6cd1f67a328e12c65e296166 SHA1 7e8d0627095f153496ebdf6dd8036bf2a01b653e SHA256 9df6e244e6e77680f9e7b3dbfc41b9e7262f4d716497e57c0526483ce11f5a62
 EBUILD libnfsidmap-0.10.ebuild 957 RMD160 81531e61e9b3d9061c3ee17b24b229cd56a562bd SHA1 ed226bcf98667c9af15898eb3e72a068c59cfdd8 SHA256 f30d6d66e03c5693a1b9012ad18af7e041ba4822c91867453764c4d22855b69a
 MD5 9deb943b6df610ecd3bb51e361cbf99d libnfsidmap-0.10.ebuild 957
@@ -19,10 +20,14 @@ EBUILD libnfsidmap-0.16.ebuild 910 RMD160 9e021b91cb66b393dfdf34678c68fdb7db79ea
 MD5 94ac26629d15539b2c2b4aeccb33f749 libnfsidmap-0.16.ebuild 910
 RMD160 9e021b91cb66b393dfdf34678c68fdb7db79eac1 libnfsidmap-0.16.ebuild 910
 SHA256 52cfaad129186ecdb774bf78cd6dd6bdcd400571c2c28896f1109c821064cc53 libnfsidmap-0.16.ebuild 910
-MISC ChangeLog 815 RMD160 8b432c5f4b5c3db89a77085f08784f541bd077e7 SHA1 c65386587288563834a62397e463852289a5103a SHA256 3524a18ccf712921bb639ae5283342f2348ce4c2a462e9e49eb458b7c95dc57d
-MD5 dfcc00e1fecdcd425b7901274a178e99 ChangeLog 815
-RMD160 8b432c5f4b5c3db89a77085f08784f541bd077e7 ChangeLog 815
-SHA256 3524a18ccf712921bb639ae5283342f2348ce4c2a462e9e49eb458b7c95dc57d ChangeLog 815
+EBUILD libnfsidmap-0.17.ebuild 910 RMD160 582987cf3596fd1015aadecfc33e6519ce9c4a5b SHA1 65fcea38aeed87bed9f22b3e8cd9468ef044443a SHA256 34efbb7a2a171fc58fe6ba92ff5509829c62487d0837e1a783ea54cb6c4aa503
+MD5 7d0b60c440701913ce090caf4595d363 libnfsidmap-0.17.ebuild 910
+RMD160 582987cf3596fd1015aadecfc33e6519ce9c4a5b libnfsidmap-0.17.ebuild 910
+SHA256 34efbb7a2a171fc58fe6ba92ff5509829c62487d0837e1a783ea54cb6c4aa503 libnfsidmap-0.17.ebuild 910
+MISC ChangeLog 968 RMD160 51e71b8ade72bbc3d0d7dcccf0378ad86684052b SHA1 6fd9f06cb77ffdcc7683ede00a609f0f196778cb SHA256 489a4d05fddb431295162bb3a729c9ed465f79fb7dc23a494095f7ee20aa5475
+MD5 90f057ecb33ab3f2bd853a64a8d3cd16 ChangeLog 968
+RMD160 51e71b8ade72bbc3d0d7dcccf0378ad86684052b ChangeLog 968
+SHA256 489a4d05fddb431295162bb3a729c9ed465f79fb7dc23a494095f7ee20aa5475 ChangeLog 968
 MISC metadata.xml 159 RMD160 8e0977b9abd90afe9e1d5c1326823a5726f6e2a4 SHA1 33f35324ce730e28838be228d9ee4e4dd1bab1e5 SHA256 562c59615c028ffa088de789b3a792fd4cbbbfe71628ddd6a55d3b176becbc6b
 MD5 a3dd8511b8874ce1b494dce2472c709c metadata.xml 159
 RMD160 8e0977b9abd90afe9e1d5c1326823a5726f6e2a4 metadata.xml 159
@@ -33,10 +38,13 @@ SHA256 fdac7ef9c6e2a092548909f1c0c55b13a22d0e10a7e5c999a05185a0816441ea files/di
 MD5 dcb3f06eab4e839ab8678e0d8cdaa5b1 files/digest-libnfsidmap-0.16 250
 RMD160 065f4ac61c070b6b857b9232e8f883b5d3c54fa2 files/digest-libnfsidmap-0.16 250
 SHA256 b227b71477ae71ebbebdb7f050b0b765a51b481dee84cb5a444d26571200e68a files/digest-libnfsidmap-0.16 250
+MD5 a4ec8bbeacb6e26a1f07d6321f7c46e6 files/digest-libnfsidmap-0.17 250
+RMD160 9a2df927d7690661ef60655fc2f0c64c8a6e2ff1 files/digest-libnfsidmap-0.17 250
+SHA256 8ca7b3fe187bfbc224242d51be297f8df11f8853b90dd552e3bc19b5e5334fdf files/digest-libnfsidmap-0.17 250
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFEixrk2+ySkm8kpY0RAn8yAJ9B40OAAMBaZlj1fck6FGW1h/VkvACeJe+S
-h8qZNi7mU8nkqmJuQMw2ms4=
-=zzqB
+iD8DBQFE6ml+amhnQswr0vIRAoliAKCtMKXARm6BbZGDtLGL3TkgGghZTwCgjUPo
+AumWDUPjMvc3+04fWatDa7c=
+=605I
 -----END PGP SIGNATURE-----
