@@ -1,0 +1,3 @@
+MD5 71d8888eae2107c7494f194e7b4b31be libnfsidmap-0.17.tar.gz 325467
+RMD160 819a7485b05bfa7de911bd5e50e7cc1c9b10c359 libnfsidmap-0.17.tar.gz 325467
+SHA256 6b3b0ffcad93f1b80f66f69330c0a8d43a5c927f7505d8086e48c831cbf7fdea libnfsidmap-0.17.tar.gz 325467
